<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColorLight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_o_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="8dp"
            android:text="@string/order_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_o_date_label" />

        <TextView
            android:id="@+id/tv_o_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/is_active"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_o_status_label"
            app:layout_constraintStart_toEndOf="@+id/tv_o_status_label"
            app:layout_constraintTop_toTopOf="@+id/tv_o_status_label" />

        <Switch
            android:id="@+id/switch_o_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:textAllCaps="false"
            android:textColor="@color/primaryColorBlue"
            android:textOff="@string/is_not_active"
            android:textOn="@string/is_active"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_o_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_o_status" />

        <TextView
            android:id="@+id/tv_o_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="8dp"
            android:text="@string/order_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_o_refresh" />

        <TextView
            android:id="@+id/tv_o_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_o_date_label"
            app:layout_constraintStart_toEndOf="@+id/tv_o_date_label"
            app:layout_constraintTop_toTopOf="@+id/tv_o_date_label" />

        <CheckBox
            android:id="@+id/cb_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/edit_text"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_o_status_label" />

        <Button
            android:id="@+id/b_o_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/action_delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_o_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/action_accept_changes"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/b_o_delete"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_edit">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_o_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:text="Name"
                    android:textAlignment="gravity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                    android:textColor="@color/primaryColorBlue"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>