<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eo_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColorLight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryColorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b_eo_back"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/action_back"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:iconTint="@color/primaryColorBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_eo_next"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/action_forward"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/primaryColorBlue"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
            app:iconGravity="end"
            app:iconTint="@color/primaryColorBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:textColorHint="@color/primaryColorDark"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/primaryColorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_eo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_eo_hint"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryColorBlue" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>